--- a/app/css/navbar.css
+++ b/app/css/navbar.css
@@ -1,7 +1,3 @@
-/*-------------------------
-    The menu
---------------------------*/
-
 nav {
     display: inline-block;
     margin: 60px auto 45px;
@@ -13,31 +9,19 @@ nav {
 nav a {
     display: inline-block;
     padding: 18px 30px;
-    color: #fff !important;
+    color: #fff;
     font-weight: bold;
     font-size: 16px;
-    text-decoration: none !important;
-    line-height: 1;
-    text-transform: uppercase;
-    background-color: transparent;
 
+    background-color: transparent;
     -webkit-transition: background-color 0.25s;
     -moz-transition: background-color 0.25s;
     transition: background-color 0.25s;
 }
 
-nav a:first-child {
-    border-radius: 2px 0 0 2px;
-}
-
-nav a:last-child {
-    border-radius: 0 2px 2px 0;
-}
-
-nav.home .home,
-nav.projects .projects,
-nav.services .services,
-nav.contact .contact {
+nav.amc .amc,
+nav.arclight .arclight,
+nav.pacific .pacific{
     background-color: deeppink;
 }
 
